Use to install PROD Without *PRD* files :-)